src/objects/Product_Publication__c.object
<CustomObject>
    <fields>
        <fullName>Product_Code_Mapping__c</fullName>
        <formula>ZProduct__r.ProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Code</label>
        <referenceTo>Zuora__Product__c</referenceTo>
        <relationshipLabel>Product Publications</relationshipLabel>
        <relationshipName>Product_Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication_Code_Mapping__c</fullName>
        <formula>Publication_Code__r.Publication_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publication Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Product Publications</relationshipLabel>
        <relationshipName>Product_Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniquenessCheck__c</fullName>
        <label>UniquenessCheck</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZProduct_Mapping__c</fullName>
        <formula>ZProduct__r.Name</formula>
        <label>ZProduct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZProduct</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ZProduct__c.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Product Publications</relationshipLabel>
        <relationshipName>Product_Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Publication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Code_Mapping__c</columns>
        <columns>ZProduct__c</columns>
        <columns>Publication_Code_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_ST_Publication</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Publication_Code__c</columns>
        <columns>Publication_Code_Mapping__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Code_Mapping__c</columns>
        <columns>ZProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code_Mapping__c</field>
            <operation>startsWith</operation>
            <value>ST</value>
        </filters>
        <label>All ST Publication</label>
    </listViews>
    <nameField>
        <displayFormat>PPUB-{00000000}</displayFormat>
        <label>Product Publication Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>